# oxydra

./: .gitignore  Cargo.toml  README.md  plan_v2.md  plna_v1.md
.github/workflows/: quality-checks.yml  release.yml
.opencode/: opencode.json
.opencode/plans/: supabase-migration-plan.md
.sisyphus/: KNOWN_ISSUES.md  boulder.json
.sisyphus/drafts/: aisdk-v3.md
.sisyphus/evidence/: task-1-injection-points.md  task-15-ledger.txt  task-16-delegation.txt  task-17-scheduler.txt  task-19-control.txt  task-2-delegation-depth.txt  task-20-rollout.txt  task-21-edge-cases.txt  task-22-examples.txt  task-23-compat.txt  task-3-schema-compat.md  task-9-baseline.txt
.sisyphus/plans/: aisdk-migration.md
crates/channels/: Cargo.toml
crates/gateway/: Cargo.toml
crates/memory/: Cargo.toml
crates/provider/: Cargo.toml
crates/runner/: Cargo.toml
crates/runtime/: Cargo.toml
crates/sdk/: Cargo.toml  README.md
crates/sdk/examples/: agentic_web_research.rs  competitive_analysis_live.rs  delegation_policy.rs  one_shot.rs  policy_enforcement.rs  pune_hotels_live.rs  security_recon.rs  streaming.rs  vuln_scanner.rs
crates/sdk/src/: client.rs  events.rs  lib.rs  policy.rs
crates/shell-daemon/: Cargo.toml
crates/tools/: Cargo.toml
crates/tools-macros/: Cargo.toml
crates/tui/: Cargo.toml
crates/types/: Cargo.toml
crates/wasm-guest/: Cargo.toml
docker/: chromium-wrapper.sh  shell-vm-entrypoint.sh
docs/: COMPARISON.md  CUSTOMIZATION.md  DEVELOPMENT.md  MANUAL_INSTALL.md
docs/plans/: oauth.md  (+5 more)
scripts/: TEST.md  build-release-assets.sh  test-build-install.sh
(+110 files in other folders)
