[workspace]
resolver = "2"
members = [
  "crates/types",
  "crates/provider",
  "crates/tools",
  "crates/tools-macros",
  "crates/runtime",
  "crates/memory",
  "crates/runner",
  "crates/oxydra-shelld",
  "crates/channels",
  "crates/gateway",
  "crates/sdk",
  "crates/tui",
  "crates/wasm-guest",
]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
debug = false
strip = true