[package]
name = "sdk"
version = "0.2.8"
edition = "2024"

[dependencies]
types = { path = "../types" }
runtime = { path = "../runtime" }
tools = { path = "../tools" }
gateway = { path = "../gateway" }

# Async runtime and utilities
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
chrono = { version = "0.4", features = ["serde"] }
